--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/router": "^19.2.0",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "card": "^2.5.4",
+    "chips": "^0.1.0",
+    "material": "^0.9.24",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
